# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  Rebuild Info dir file in pkg_postinst.

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.9999-r8.ebuild:
  readded the lost configuration line for USE=gtk

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  extending einfo output when GTK+ toolkit is chosen

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  added some echo commands to pretty-print the output

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  added some comments for the tricky lines

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  change variable name from MIN_VERSION to FULL_VERSION to emphasize its content

  26 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  Don't quote wildcards.

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  -emacs-cvs-22.0.95-r3.ebuild, -emacs-cvs-22.0.9999-r7.ebuild,
  -emacs-cvs-23.0.0-r3.ebuild:
  clean up

  22 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  Determine MIN_VERSION automatically.

  20 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
  emacs-cvs-23.0.0-r4.ebuild:
  Make version check in site-init file work.
