@@ -11,22 +11,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.96.tar.gz 37846686 RMD160 d980f7f8ec6c646a9b741718284b081987f9d73c SHA1 e2942bdbf693a0814fcc3b34d5ae55765d5d4ad8 SHA256 a9fa904e00e09d8b68e701edda208bd274053d26d0b50d97d6c977084e5c307d
-EBUILD emacs-cvs-22.0.96.ebuild 7529 RMD160 c471423d46c29e97bc2d300117e08d45b0fbe6dc SHA1 8f9b796db0d85ed348b84bd46e516aaa05fd53ac SHA256 f942a83a860bb28d20bcd5b326e8d45506e82031682a697e1028eb66dcb5da01
-MD5 d1804de5b5099077f7611ef97cffb7be emacs-cvs-22.0.96.ebuild 7529
-RMD160 c471423d46c29e97bc2d300117e08d45b0fbe6dc emacs-cvs-22.0.96.ebuild 7529
-SHA256 f942a83a860bb28d20bcd5b326e8d45506e82031682a697e1028eb66dcb5da01 emacs-cvs-22.0.96.ebuild 7529
-EBUILD emacs-cvs-22.0.9999-r8.ebuild 7847 RMD160 8aa7d105b4d237a95c9c282d4892c0e3c119363c SHA1 221ceaf144cdc2ba68651fbf8a349f60c119bb2f SHA256 066a62f29b578d43e9249367d9ad25e1c1570fb5c669c2999afeefb583d4723e
-MD5 8f69712930456221e8fc8d05d48ff410 emacs-cvs-22.0.9999-r8.ebuild 7847
-RMD160 8aa7d105b4d237a95c9c282d4892c0e3c119363c emacs-cvs-22.0.9999-r8.ebuild 7847
-SHA256 066a62f29b578d43e9249367d9ad25e1c1570fb5c669c2999afeefb583d4723e emacs-cvs-22.0.9999-r8.ebuild 7847
-EBUILD emacs-cvs-23.0.0-r4.ebuild 8105 RMD160 0d81bbe3435f4cf07af4a30b7d6c512d3d969743 SHA1 42a6bfc41f9369033dfc48affb7d5aacb044242b SHA256 58e3a679090aba7ff71c471506219a2eeefea8c3014ac1f501b1cedfc0864d95
-MD5 3cff836a6531c6536bcc4df512e8c40b emacs-cvs-23.0.0-r4.ebuild 8105
-RMD160 0d81bbe3435f4cf07af4a30b7d6c512d3d969743 emacs-cvs-23.0.0-r4.ebuild 8105
-SHA256 58e3a679090aba7ff71c471506219a2eeefea8c3014ac1f501b1cedfc0864d95 emacs-cvs-23.0.0-r4.ebuild 8105
-MISC ChangeLog 8037 RMD160 91a26e766c20f85734527115a78a4e47ae26a732 SHA1 e0084cb62d34b7a02ec148f6fd24f06316b8f14a SHA256 2ec460bb02eaca9024e3005311097af1f86197b3b2212bc14bfa70765e361435
-MD5 95e8579f7a001e353715283a3dfc85e3 ChangeLog 8037
-RMD160 91a26e766c20f85734527115a78a4e47ae26a732 ChangeLog 8037
-SHA256 2ec460bb02eaca9024e3005311097af1f86197b3b2212bc14bfa70765e361435 ChangeLog 8037
+EBUILD emacs-cvs-22.0.96.ebuild 7770 RMD160 4678317cf3fb80aab0b502e9000d6db455bceaba SHA1 2a8e2f477a997c17fa8fd7f9c54eb500c9ba6b80 SHA256 0c515f84f72ac534ec39995d90258f9318f508016bdc7da869d6fed8bb8ee4cd
+MD5 cc814509c323a544f378611882a7d98a emacs-cvs-22.0.96.ebuild 7770
+RMD160 4678317cf3fb80aab0b502e9000d6db455bceaba emacs-cvs-22.0.96.ebuild 7770
+SHA256 0c515f84f72ac534ec39995d90258f9318f508016bdc7da869d6fed8bb8ee4cd emacs-cvs-22.0.96.ebuild 7770
+EBUILD emacs-cvs-22.0.9999-r8.ebuild 8088 RMD160 c8a5322956be08790d80a44eb6f42d6cdcb30e2a SHA1 cfee3ee3e79618cb01c96f3872333fd7961c0a71 SHA256 1e48b288d7f890eb59f20572267d6bb497f1d7437da4db4a1ee0b8bd343afac8
+MD5 9c529d54380d23a14aa06ad0b360bddb emacs-cvs-22.0.9999-r8.ebuild 8088
+RMD160 c8a5322956be08790d80a44eb6f42d6cdcb30e2a emacs-cvs-22.0.9999-r8.ebuild 8088
+SHA256 1e48b288d7f890eb59f20572267d6bb497f1d7437da4db4a1ee0b8bd343afac8 emacs-cvs-22.0.9999-r8.ebuild 8088
+EBUILD emacs-cvs-23.0.0-r4.ebuild 8346 RMD160 359ed31339a37634d7bee8c05a64886b435e4b9a SHA1 f098a2b1480dadbcbaa60cd81240237ca67a2b26 SHA256 4dd1f0d708cb218d08f6b8f1542fabd7e73feaca3b1d70d62c615f2480896b6e
+MD5 cfca3df0775156f04458d85167ddc78b emacs-cvs-23.0.0-r4.ebuild 8346
+RMD160 359ed31339a37634d7bee8c05a64886b435e4b9a emacs-cvs-23.0.0-r4.ebuild 8346
+SHA256 4dd1f0d708cb218d08f6b8f1542fabd7e73feaca3b1d70d62c615f2480896b6e emacs-cvs-23.0.0-r4.ebuild 8346
+MISC ChangeLog 8224 RMD160 d5f3579d8be68cabdb6a63a07e912df0a986441a SHA1 d67e2870e80ff135b642a36c8857818314a22714 SHA256 dd5cb300ca69d48a9b1e183a49bb7afbe38922c8359bfdb58539ea035e7f91ae
+MD5 11dd8086c4babd7918f44d6e22077229 ChangeLog 8224
+RMD160 d5f3579d8be68cabdb6a63a07e912df0a986441a ChangeLog 8224
+SHA256 dd5cb300ca69d48a9b1e183a49bb7afbe38922c8359bfdb58539ea035e7f91ae ChangeLog 8224
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
