@@ -5,6 +5,11 @@
   28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
   emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
   emacs-cvs-23.0.0-r4.ebuild:
+  Rebuild Info dir file in pkg_postrm, too.
+
+  28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
+  emacs-cvs-23.0.0-r4.ebuild:
   Rebuild Info dir file in pkg_postinst.
 
   26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
